--- a/posicion.css
+++ b/posicion.css
@@ -1,10 +1,11 @@
-.circulo { width: 100px;
-            height: 100px;
+.circulo { 
+    width: 100px;
+    height: 100px;
     
 
 }
 
 .circulo-1 {
     background-color: chartreuse;
-    of
+    
 }
