--- a/cuadroscolores.css
+++ b/cuadroscolores.css
@@ -4,35 +4,35 @@
 .rojo{
     background-color: red;
     width: 100%;
-    height: 100px;
+    height: 20vh;
     float: right;
 }
 
 .azul{
     background-color: blue;
     width: 100%;
-    height: 30px;
+    height: 5vh;
     float: right;
 }
 
 .rosa{
     background-color: darksalmon;
     width: 60%;
-    height: 500px;
+    height: 70vh;
     float: left;
 }
 
 .morado{
     background-color: mediumpurple;
     width: 37%;
-    height: 500px;
+    height: 70vh;
     float: right;
 }
 
 .verde{
     background-color: chartreuse;
     width: 100%;
-    height: 30px;
+    height: 5vh;
     float: left;
 
 }
